Fix table-wrap padded.

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -8675,7 +8675,8 @@ ul {
 }
 
 .table-wrap.padded, .label-wrap img.table-wrap, div.table-wrap.Messages.Errors {
-  margin: 1.125rem 0;
+  margin-top: 1.125rem;
+  margin-bottom: 1.125rem;
 }
 
 .table-wrap.padded-top {
