--- a/applications/dashboard/scss/_tables.scss
+++ b/applications/dashboard/scss/_tables.scss
@@ -14,7 +14,8 @@
   }
 
   &.padded {
-    margin: $spacer 0;
+    margin-top: $spacer;
+    margin-bottom: $spacer;
   }
 
   &.padded-top {
